fix close button alignment issue.

--- a/schmodel-registration-frontend/src/app/pages/edit-profile/edit-profile.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/edit-profile/edit-profile.component.scss
@@ -124,14 +124,19 @@ accordion.edit-profile {
     align-items: center;
     font-size: 11px;
 
-    &.row--valign-top,
     &.row--multi {
-      align-items: center;
-    }
+      align-items: flex-start;
 
-    &.row--multi select {
-      margin-bottom: 4px;
-      padding-right: 20px;
+      sch-dropdown {
+        display: inline-block;
+        width: calc(100% - 5px);
+
+        select {
+          width: 100%;
+          margin-bottom: 4px;
+          padding-right: 18px;
+        }
+      }
     }
 
     label {
